public/style.css
@charset "UTF-8";

@import url(css/animations.css);
@import url(css/popup.css);
@import url(css/promptmanager.css);
@import url(css/loader.css);
@import url(css/character-group-overlay.css);
@import url(css/file-form.css);
@import url(css/logprobs.css);
@import url(css/accounts.css);
@import url(css/tags.css);
@import url(css/scrollable-button.css);
@import url(css/welcome.css);
@import url(css/data-maid.css);
@import url(css/secrets.css);
@import url(css/backgrounds.css);
@import url(css/chat-backups.css);

:root {
    interpolate-size: allow-keywords;
    --doc-height: 100%;
    --transparent: rgba(0, 0, 0, 0);

    --black30a: rgba(0, 0, 0, 0.3);
    --black50a: rgba(0, 0, 0, 0.5);
    --black60a: rgba(0, 0, 0, 0.6);
    --black70a: rgba(0, 0, 0, 0.7);
    --black90a: rgba(0, 0, 0, 0.9);
    --black100: rgba(0, 0, 0, 1);

    --white20a: rgba(255, 255, 255, 0.2);
    --white30a: rgba(255, 255, 255, 0.3);
    --white50a: rgba(255, 255, 255, 0.5);
    --white60a: rgba(255, 255, 255, 0.6);
    --white70a: rgba(255, 255, 255, 0.7);
    --white100: rgba(255, 255, 255, 1);

    --grey10: rgb(25, 25, 25);
    --grey30: rgb(75, 75, 75);
    --grey50: rgb(125, 125, 125);
    --grey5020a: rgba(125, 125, 125, 0.2);
    --grey5050a: rgba(125, 125, 125, 0.5);
    --grey70: rgb(175, 175, 175);
    --grey75: rgb(190, 190, 190);

    --grey30a: rgba(50, 50, 50, 0.3);
    --grey7070a: rgba(175, 175, 175, 0.7);

    --fullred: rgba(255, 0, 0, 1);
    --crimson70a: rgba(100, 0, 0, 0.7);
    --crimson-hover: rgba(150, 50, 50, 0.5);
    --okGreen70a: rgba(0, 100, 0, 0.7);
    --cobalt30a: rgba(100, 100, 255, 0.3);
    --greyCAIbg: rgb(36, 36, 37);
    --ivory: rgb(220, 220, 210);
    --golden: rgb(248, 211, 0);
    --warning: rgba(255, 0, 0, 0.9);
    --active: rgb(88, 182, 0);
    --preferred: rgb(244, 67, 54);

    --interactable-outline-color: var(--white100);
    --interactable-outline-color-faint: var(--white20a);

    --reasoning-body-color: var(--SmartThemeEmColor);
    --reasoning-em-color: color-mix(in srgb, var(--SmartThemeEmColor) 67%, var(--SmartThemeBlurTintColor) 33%);
    --reasoning-saturation: 0.5;


    /*Default Theme, will be changed by ToolCool Color Picker*/
    --SmartThemeBodyColor: rgb(220, 220, 210);
    --SmartThemeEmColor: rgb(145, 145, 145);
    --SmartThemeUnderlineColor: rgb(188, 231, 207);
    --SmartThemeQuoteColor: rgb(225, 138, 36);
    /* --SmartThemeFastUIBGColor: rgba(0, 0, 0, 0.9); */
    --SmartThemeBlurTintColor: rgba(23, 23, 23, 1);
    --SmartThemeChatTintColor: rgba(23, 23, 23, 1);
    --SmartThemeUserMesBlurTintColor: rgba(0, 0, 0, 0.3);
    --SmartThemeBotMesBlurTintColor: rgba(60, 60, 60, 0.3);
    --SmartThemeBlurStrength: calc(var(--blurStrength) * 1px);
    --SmartThemeShadowColor: rgba(0, 0, 0, 0.5);
    --SmartThemeBorderColor: rgba(0, 0, 0, 0.5);
    --SmartThemeCheckboxBgColorR: 220;
    --SmartThemeCheckboxBgColorG: 220;
    --SmartThemeCheckboxBgColorB: 210;
    --SmartThemeCheckboxTickColorValue: calc(((((var(--SmartThemeCheckboxBgColorR) * 299) + (var(--SmartThemeCheckboxBgColorG) * 587) + (var(--SmartThemeCheckboxBgColorB) * 114)) / 1000) - 128) * -1000);
    --SmartThemeCheckboxTickColor: rgb(var(--SmartThemeCheckboxTickColorValue),
            var(--SmartThemeCheckboxTickColorValue),
            var(--SmartThemeCheckboxTickColorValue));


    --sheldWidth: 50vw;
    /* 800px; */
    /*base variable calculated in rems*/
    --fontScale: 1;
    --mainFontSize: calc(var(--fontScale) * 15px);
    --mainFontFamily: "Noto Sans", sans-serif;
    --monoFontFamily: 'Noto Sans Mono', 'Courier New', Consolas, monospace;

    /* base variable for blur strength slider calculations */
    --blurStrength: 10;

    /* base variable for shadow width slider calculations */
    --shadowWidth: 2;

    /* Send form variables */
    --bottomFormBlockPadding: calc(var(--mainFontSize) / 2.5);
    --bottomFormIconSize: calc(var(--mainFontSize) * 1.9);
    --bottomFormBlockSize: calc(var(--bottomFormIconSize) + var(--bottomFormBlockPadding));

    /*Top Bar Scaling Variables*/
    --topBarIconSize: calc(var(--mainFontSize) * 2);
    --topBarBlockSize: calc(var(--topBarIconSize) + var(--topBarBlockPadding));
    --topBarBlockPadding: calc(var(--mainFontSize) / 3);

    /*styles for the color picker*/
    --tool-cool-color-picker-btn-bg: transparent;
    --tool-cool-color-picker-btn-border-color: transparent;

    --mes-right-spacing: 30px;

    --avatar-base-height: 50px;
    --avatar-base-width: 50px;
    --avatar-base-border-radius: 2px;
    --avatar-base-border-radius-round: 50%;
    --avatar-base-border-radius-rounded: 10px;
    --inline-avatar-small-factor: 0.6;

    --animation-duration: 125ms;
    --animation-duration-2x: calc(var(--animation-duration) * 2);
    --animation-duration-3x: calc(var(--animation-duration) * 3);
    --animation-duration-slow: var(--animation-duration-3x);
}

* {
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    -webkit-tap-highlight-color: transparent;
    -moz-osx-font-smoothing: grayscale;
    text-shadow: 0px 0px calc(var(--shadowWidth) * 1px) var(--SmartThemeShadowColor);
}

html {
    /*fix for chrome flickering on blurred divs*/
    -webkit-transform: translateZ(0);
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
}

body {
    margin: 0;
    padding: 0;
    width: 100%;
    /*fallback for JS load*/
    height: 100vh;
    height: 100dvh;
    /*defaults as 100%, then reassigned via JS as pixels, will work on PC and Android*/
    /*height: calc(var(--doc-height) - 1px);*/
    background-color: var(--SmartThemeBlurTintColor);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    font-family: var(--mainFontFamily);
    font-size: var(--mainFontSize);
    color: var(--SmartThemeBodyColor);
    overflow: hidden;
    color-scheme: only light;
}

::-webkit-scrollbar {
    width: 0.7rem;
    scrollbar-gutter: stable;
}
/* ... */

